--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.project</groupId>
-	<artifactId>ThoMaiessenger</artifactId>
+	<artifactId>MTmess</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ThoMaiessenger</name>
+	<name>MTmess</name>
 	<description>First java project lets goooo</description>
 	<properties>
 		<java.version>17</java.version>
