--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-stomp": "^5.1.0",
+    "react-talk": "^1.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
@@ -32,7 +34,6 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
